--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "nodemon ./src/index.js --exec babel-node",
     "start": "node ./public/index"
   },
+  "heroku-run-build-script": true,
   "author": "",
   "license": "ISC",
   "dependencies": {
